[gd_scene load_steps=10 format=2]

[ext_resource path="res://nodes/Main.gd" type="Script" id=1]
[ext_resource path="res://nodes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/421811__lupalenzuela__zoom0004-lr.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/466478__ellary__jazzy-vibes-36-loop-smooth-jazz.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/143117__1pjladd2__eating-an-apple.ogg" type="AudioStream" id=7]
[ext_resource path="res://img/BG.jpg" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 250 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 239.913, 400 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 480, 427.744 )
rotation = 1.5708
offset = 908.815

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="HuskySonata" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 3.671

[node name="Chillymanjaro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.235
autoplay = true

[node name="AppleChomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BG" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 240, 360 )
scale = Vector2( 0.234375, 0.264641 )
texture = ExtResource( 8 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="Chillymanjaro" to="." method="_on_Chillymanjaro_finished"]
